--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-highlight": "^0.12.5",
+    "@types/react-syntax-highlighter": "^13.5.2"
   }
 }
