--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usefull-ts",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -12,12 +12,13 @@
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
+    "esbuild-wasm": "0.8.27",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
